{
  "version": 4,
  "terraform_version": "1.4.7",
  "serial": 29,
  "lineage": "8b4d65e3-5973-3f8e-09b3-e54ee5f9559f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "ansible_vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:route-table/rtb-0e5399bb050adc46a",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-046211288d654ee18",
                "route_table_id": "rtb-0e5399bb050adc46a",
                "subnet_id": "subnet-024d0045084a503d6"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0e5399bb050adc46a",
            "owner_id": "431734419849",
            "route_table_id": "rtb-0e5399bb050adc46a",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e07033d9aa6e7c79",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-024d0045084a503d6",
            "tags": {
              "Name": "k8mgmtserver-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ff6b7616ee32e53"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "ansible_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:vpc/vpc-04ff6b7616ee32e53",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fc515bb5c7d0f249",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-06804edc1f254429e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ff6b7616ee32e53",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fc644b5a68b9d2d3",
            "owner_id": "431734419849",
            "tags": {
              "Name": "k8mgmtserver-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker-masters",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:431734419849:instance/i-039ae79dc0e1b556d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039ae79dc0e1b556d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "laptop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0677f2319675a73e2",
            "private_dns": "ip-10-35-1-75.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.35.1.75",
            "public_dns": "ec2-34-231-171-204.compute-1.amazonaws.com",
            "public_ip": "34.231.171.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b711df0fe7389560",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0297817db1d4b1993",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-MastertNode-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-MastertNode-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073bbcfd74b84eca6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:431734419849:instance/i-02b47e8b5593a2c66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b47e8b5593a2c66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "laptop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a8a9982a59b90f2d",
            "private_dns": "ip-10-35-2-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.35.2.51",
            "public_dns": "ec2-35-174-153-41.compute-1.amazonaws.com",
            "public_ip": "35.174.153.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-030a93b0520394eed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03eec7720f0dcaf60",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-MastertNode-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-MastertNode-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073bbcfd74b84eca6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:431734419849:instance/i-0ddf64b5a54956317",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ddf64b5a54956317",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "laptop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0800296a182829eb0",
            "private_dns": "ip-10-35-3-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.35.3.84",
            "public_dns": "ec2-54-196-168-139.compute-1.amazonaws.com",
            "public_ip": "54.196.168.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06a89556a0d857f16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2e364144dc72ff0",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-MastertNode-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-MastertNode-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073bbcfd74b84eca6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker-workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:431734419849:instance/i-0bf9f75307fc441ca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf9f75307fc441ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "laptop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0da3de11e1d2934f7",
            "private_dns": "ip-10-35-1-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.35.1.68",
            "public_dns": "ec2-34-201-17-164.compute-1.amazonaws.com",
            "public_ip": "34.201.17.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0489d3547df2bf2fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0297817db1d4b1993",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-WorkerNode-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-WorkerNode-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073bbcfd74b84eca6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:431734419849:instance/i-00dc72c990db00f55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00dc72c990db00f55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "laptop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-027a86f8ba7bf540a",
            "private_dns": "ip-10-35-2-113.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.35.2.113",
            "public_dns": "ec2-3-80-156-135.compute-1.amazonaws.com",
            "public_ip": "3.80.156.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dbf924f6d08867eb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03eec7720f0dcaf60",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-WorkerNode-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-WorkerNode-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073bbcfd74b84eca6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:431734419849:instance/i-017711de5ad655105",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017711de5ad655105",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "laptop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6c62e01e7303b6b",
            "private_dns": "ip-10-35-3-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.35.3.146",
            "public_dns": "ec2-54-163-12-234.compute-1.amazonaws.com",
            "public_ip": "54.163.12.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05467ccd0fe763453",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2e364144dc72ff0",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-WorkerNode-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-WorkerNode-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073bbcfd74b84eca6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:internet-gateway/igw-0887b5ac88f2fbaf9",
            "id": "igw-0887b5ac88f2fbaf9",
            "owner_id": "431734419849",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-IGW",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-IGW",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-080c6b56f16515a8e"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f8dbcf04e15fdd38179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8dbcf04e15fdd38",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08a343ef462affb15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_vpc.default",
            "aws_vpc_peering_connection.foo",
            "data.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peeringfromansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.35.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e5399bb050adc46a2028132907",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e5399bb050adc46a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08a343ef462affb15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_vpc.default",
            "aws_vpc_peering_connection.foo",
            "data.aws_route_table.ansible_vpc_rt",
            "data.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:route-table/rtb-08c9268dbb7013700",
            "id": "rtb-08c9268dbb7013700",
            "owner_id": "431734419849",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-Private-RT",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-Private-RT",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-080c6b56f16515a8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:route-table/rtb-0f8dbcf04e15fdd38",
            "id": "rtb-0f8dbcf04e15fdd38",
            "owner_id": "431734419849",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0887b5ac88f2fbaf9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-MAIN-RT",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-MAIN-RT",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-080c6b56f16515a8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09898321bcf80c99f",
            "route_table_id": "rtb-08c9268dbb7013700",
            "subnet_id": "subnet-06b39e32bc4ec7ea1"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eee2c392496227a9",
            "route_table_id": "rtb-08c9268dbb7013700",
            "subnet_id": "subnet-0b1fc4e5392f72463"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0554d33e0fb76dcfd",
            "route_table_id": "rtb-08c9268dbb7013700",
            "subnet_id": "subnet-0b5b92aa61693c616"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ac4118d545cdd58",
            "route_table_id": "rtb-0f8dbcf04e15fdd38",
            "subnet_id": "subnet-0297817db1d4b1993"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0b06ee7351dc099",
            "route_table_id": "rtb-0f8dbcf04e15fdd38",
            "subnet_id": "subnet-03eec7720f0dcaf60"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b071ad71b72b8e67",
            "route_table_id": "rtb-0f8dbcf04e15fdd38",
            "subnet_id": "subnet-0c2e364144dc72ff0"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:security-group/sg-073bbcfd74b84eca6",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073bbcfd74b84eca6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.1.1.0/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.1.0/32"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.2.1.0/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "431734419849",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-080c6b56f16515a8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:subnet/subnet-06b39e32bc4ec7ea1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.35.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b39e32bc4ec7ea1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431734419849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PrivateSubnet-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PrivateSubnet-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-080c6b56f16515a8e"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:subnet/subnet-0b1fc4e5392f72463",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.35.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1fc4e5392f72463",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431734419849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PrivateSubnet-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PrivateSubnet-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-080c6b56f16515a8e"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:subnet/subnet-0b5b92aa61693c616",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.35.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5b92aa61693c616",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431734419849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PrivateSubnet-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PrivateSubnet-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-080c6b56f16515a8e"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:subnet/subnet-0297817db1d4b1993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.35.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0297817db1d4b1993",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431734419849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicSubnet-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicSubnet-1",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-080c6b56f16515a8e"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:subnet/subnet-03eec7720f0dcaf60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.35.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eec7720f0dcaf60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431734419849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicSubnet-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicSubnet-2",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-080c6b56f16515a8e"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:subnet/subnet-0c2e364144dc72ff0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.35.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2e364144dc72ff0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431734419849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicSubnet-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOpsB35-PublicSubnet-3",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-080c6b56f16515a8e"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431734419849:vpc/vpc-080c6b56f16515a8e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.35.0.0/16",
            "default_network_acl_id": "acl-0c7c7b01afae3db58",
            "default_route_table_id": "rtb-0de5ce305f0ecbdca",
            "default_security_group_id": "sg-0187b701c61e12af9",
            "dhcp_options_id": "dopt-06804edc1f254429e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-080c6b56f16515a8e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de5ce305f0ecbdca",
            "owner_id": "431734419849",
            "tags": {
              "Name": "DevSecOpsB35",
              "Owner": "Sreeharsha Veerapalli",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes",
              "environment": "production"
            },
            "tags_all": {
              "Name": "DevSecOpsB35",
              "Owner": "Sreeharsha Veerapalli",
              "ProjectID": "devsecopsb35-phoenix-123",
              "Terraform-Managed": "Yes",
              "environment": "production"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "foo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-08a343ef462affb15",
            "peer_owner_id": "431734419849",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-04ff6b7616ee32e53",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Name": "Ansible-DevSecOpsB35-Peering"
            },
            "tags_all": {
              "Name": "Ansible-DevSecOpsB35-Peering"
            },
            "vpc_id": "vpc-080c6b56f16515a8e"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_vpc.ansible_vpc"
          ]
        }
      ]
    }
  ]
}